# Smoke-Alarm

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .repo_bootstrap_ok  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: gui.instructions.md  optimizer.instructions.md  services.instructions.md
.github/workflows/: auto-rebase.yml  backup_sheets.yaml  ci.yml  docs.yml  health.yaml  import_leads.yaml  labeler.yml  mega-linter.yml  outreach.yaml  pr-sanity.yml  (+7 more)
agent/: AGENTS.md  requirements.txt
api/: main.py
apps_script/: appsscript.json  invoiceAndStripe.gs  mergeReport.gs  setup.gs  workflow.gs
apps_script_addons/: onboard.gs
dispatcher_ui/: app.py
docs/: CODEX_BOOTSTRAP_PROMPT.md  CRM_SCHEMA.md  README.md  SECRETS.md  USAGE.md  WORKFLOWS.md  engineering.md  index.html  integrations.md  missing_business_requirements.md  osrm-self-host.md  oss-integration-plan.md  platform_integrations.md  repo-audit.md  runbook.md  scrapy_integration.md  styles.css
gui/: AGENTS.md  README.md  app.py  index.html  package-lock.json  package.json
scripts/: auto-resolve-trivial.sh  launch_gui.sh  pr-preflight.sh  sbom-syft.sh  scan-trivy.sh  setup_gui_shortcut.ps1  setup_gui_shortcut.sh  start_gui.bat  start_gui.sh  strip_conflicts.sh
sheets/: Activities.csv  Alarms.csv  Clients.csv  Companies.csv  Contacts.csv  Inspections.csv  Leads.csv  Opportunities.csv  Templates.csv
workflows/: agent-cron.yaml  deploy-appsscript.yaml
(+113 files in other folders)
